WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
84223
[BlackBerry] HTTP GET header has a "Cookie" when refreshing a page after cookies have been cleared.
https://bugs.webkit.org/show_bug.cgi?id=84223
Summary
[BlackBerry] HTTP GET header has a "Cookie" when refreshing a page after cook...
Jason Liu
Reported
2012-04-17 19:05:22 PDT
How To reproduce 1. Launch the browser 2. Go to the following website:
http://63.64.187.235/longterm_cookie.php
3. Go to the following website:
http://63.64.187.235/plain_cookie.php
4. Go to the following website:
http://63.64.187.235/cookie_result1.php
5. Clear all cookies 6. Refresh the page 7. Put the input cursor in the URL bar and hit GO Expected Results 2. A long term cookie is stored. The cookie expires in 5-minutes 3. A session cookie is stored 4. The pages displays the following, or similar [--- BEGIN PAGE CONTENT ---] These are the cookies received from your browser: 1: test = 1 2: lt_test = 1 [--- END PAGE CONTENT ---] 5. All Cookies are deleted 6. The pages displays the following, or similar [--- BEGIN PAGE CONTENT ---] These are the cookies received from your browser: [--- END PAGE CONTENT ---] 7. The pages displays the following, or similar [--- BEGIN PAGE CONTENT ---] These are the cookies received from your browser: [--- END PAGE CONTENT ---] Actual Results 2. As expected 3. As expected 4. As expected 5. Web Inspected does not show any cookies. 6. The pages displays the following, or similar [--- BEGIN PAGE CONTENT ---] These are the cookies received from your browser: 1: test = 1 2: lt_test = 1 [--- END PAGE CONTENT ---] 7. The pages displays the following, or similar [--- BEGIN PAGE CONTENT ---] These are the cookies received from your browser: [--- END PAGE CONTENT ---]
Attachments
Patch
(5.35 KB, patch)
2012-04-17 20:46 PDT
,
Jason Liu
no flags
Details
Formatted Diff
Diff
Patch
(5.35 KB, patch)
2012-04-18 02:38 PDT
,
Jason Liu
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Jason Liu
Comment 1
2012-04-17 20:46:13 PDT
Created
attachment 137650
[details]
Patch
George Staikos
Comment 2
2012-04-18 01:09:55 PDT
Comment on
attachment 137650
[details]
Patch Change cookieHeaderMayDirty to cookieHeaderMayBeDirty
Jason Liu
Comment 3
2012-04-18 02:38:47 PDT
Created
attachment 137662
[details]
Patch
WebKit Review Bot
Comment 4
2012-04-18 03:56:53 PDT
Comment on
attachment 137662
[details]
Patch Clearing flags on attachment: 137662 Committed
r114498
: <
http://trac.webkit.org/changeset/114498
>
WebKit Review Bot
Comment 5
2012-04-18 03:56:58 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug