[BlackBerry] HTTP GET header has a "Cookie" when refreshing a page after cookies have been cleared. https://bugs.webkit.org/show_bug.cgi?id=84223

Patch by Jason Liu <jason.liu@torchmobile.com.cn> on 2012-04-18
Reviewed by George Staikos.

.:

* ManualTests/blackberry/clear-cookie-refresh-result.php: Added.
* ManualTests/blackberry/clear-cookie-refresh.php: Added.

Source/WebCore:

Webkit uses the old ResourceRequest when refreshing. Its cookies' header isn't removed after clicking
"clear cookies" button. We need to set cookies for this request again.

We must click "clear button" to test, so have to write a manual test case.

Test: ManualTests/blackberry/clear-cookie-refresh.php

* platform/network/blackberry/ResourceRequestBlackBerry.cpp:
(WebCore::ResourceRequest::initializePlatformRequest):

Canonical link: https://commits.webkit.org/101746@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@114498 268f45cc-cd09-0410-ab3c-d52691b4dbfc