ManualTests/blackberry/clear-cookie-refresh.php
@@ -1,0 +1,4 @@
+<?php
+    setcookie("cookieName", "cookieValue");
+    header("Location: clear-cookie-refresh-result.php");
+?>
